--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 			<h3>Styling</h3>
 
-			<p>To keep the plugin simple there are no styles added to the navigation, that’s all up to you. The nav structure looks like this and includes class names in <a href="https://twitter.com/csswizardry">@csswizardry's</a> <a href="http://inuitcss.com/">inuit.css</a> framework style:</p>
+			<p>To keep the plugin simple there are no styles added to the navigation, that's all up to you. The nav structure looks like this and includes class names in <a href="https://twitter.com/csswizardry">@csswizardry's</a> <a href="http://inuitcss.com/">inuit.css</a> framework style:</p>
 
 			<p><code>html
 			&lt;nav class="section-nav"&gt;
