Fixed script links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header class="page-header" role="banner">
-		<h1><a href="#">jQuery sectionNav</a></h1>
+		<h1>jQuery sectionNav</h1>
 		<p>A jQuery plugin to build a sticky navigation of a article's sections with highlighting while scrolling.</p>
 	</header>
 
@@ -97,11 +97,11 @@
 
 			<p><a href="http://jimmynotjim.com">James Wilson (@jimmynotjim)</a></p>
 
-			<p>With a bit of guidance from <a href="https://github.com/ericclemmons">Eric Clemmons (@ericclemmons)</a></p>
+			<p>With a bit of guidance from <a href="http://github.com/ericclemmons">Eric Clemmons (@ericclemmons)</a></p>
 		</article>
 	</div>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script src="jquery.sectionNav.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script src="http://raw.github.com/jimmynotjim/sectionNav/master/jquery.sectionNav.js"></script>
 	<script>
 		$('.post-article').sectionNav({
 			sections: 'h2',
