Page byline update

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 	<header class="page-header" role="banner">
 		<h1>jQuery sectionNav</h1>
-		<p>A jQuery plugin to build a sticky navigation of a article's sections with highlighting while scrolling.</p>
+		<p>A jQuery plugin to build a sticky navigation from the content of an article.</p>
+		<p>Look to the left to see it in action or try [this demo][2] to get an idea of how it all works.</p>
 	</header>
 
 	<div class="main" role="main">
