Fixed src and plugin call

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 		</article>
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script src="http://raw.github.com/jimmynotjim/sectionNav/master/jquery.sectionNav.js"></script>
+	<script src="http://raw.github.com/jimmynotjim/scrollNav/dev/jquery.scrollNav.js"></script>
 	<script>
-		$('.post-article').sectionNav({
+		$('.post-article').scrollNav({
 			sections: 'h2',
 			titleText: 'Sections',
 			fixedMargin: 60
