Adding basic styles w/ Responsable.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>jQuery scrollNav</title>
 <meta nam='description' content='A jQuery plugin to build a sticky navigation of a article’s sections with highlighting while scrolling.'>
 <meta name='keywords' content='sticky nav, scrolling nav, navigation, james wilson, jimmynotjim, JS, javascript'>
-<link rel='stylesheet' href='style.css'>
+<link rel='stylesheet' href='file:///Users/jw/Repos/scrollNav/assets/css/style.css'>
 </head>
 <body>
 	<header class="page-header" role="banner">
@@ -121,7 +121,7 @@
 		</article>
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script src="http://raw.github.com/jimmynotjim/scrollNav/dev/jquery.scrollNav.js"></script>
+	<script src="jquery.scrollNav.min.js"></script>
 	<script>
 		$('.post-article').scrollNav({
 			sections: 'h2',
