--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</li>
 				<li>
 					<h3>Tiny Size</h3>
-					<p>At 1.8kb min'd, scrollNav is pretty unintrusive. If you use Ajax to import initiate it, it's almost negligable.</p>
+					<p>At 1.8kb min'd, scrollNav is pretty unintrusive. If you use Ajax to import and initiate it, it's almost negligable.</p>
 				</li>
 			</ul>
 
