Added real links

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<p class="intro">Long articles and posts have always been difficult to scan and navigate. scrollNav.js is light jQuery plugin that grabs your page's existing content, divides it up into logical sections, and builds a customizable scrolling sidebar navigation.</p>
 
 			<div class="grab-it">
-				<a href="#">Grab the Source</a>
-				<a href="#">Fork the Repo</a>
+				<a href="https://github.com/jimmynotjim/scrollNav/archive/master.zip">Grab the Source</a>
+				<a href="https://github.com/jimmynotjim/scrollNav">Fork the Repo</a>
 			</div>
 
 			<h2>Features</h2>
