Doh! Forgot Doctype, which was screwing up window.height()

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>jQuery scrollNav</title>
@@ -162,7 +163,6 @@ $('.post-article').scrollNav({
 			fixedMargin: 60
 		});
 		var $item = $('.scroll-nav-link');
-		console.log($item);
 		$.each($item, function(){
 			$text = $(this).html().toLowerCase();
 			$(this).addClass($text);
