--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
 <title>jQuery scrollNav</title>
@@ -152,6 +152,10 @@ $('.post-article').scrollNav({
 					<li><a href="http://twitter.com/ericclemmons" class="author-link twitter"></a></li>
 				</ul>
 			</div>
+
+			<h2>Colophon</h2>
+			<p>scrollNav logo is set in Alfa Slab One by <a href="http://jmsole.cl/">JM Solé</a>. Body text and headlines are set in Open Slab by <a href="http://www.ascendercorp.com/about/steve-matteson/">Steve Matteson</a>. Both are delivered using <a href="http://www.google.com/webfonts">Google Web Fonts</a>. Icons are Entypo by Daniel Buce.</p>
+			<p>This demo is hosted and powered by GitHub through GitHub Pages, built using Sublime Text 2, Codekit, and Anvil utilizing standard html5, jQuery and SCSS with the ResponsableCSS framework.</p>
 		</article>
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
