style tweaks and text formatting fixes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>jQuery scrollNav</title>
+<title>scrollNav.js</title>
 <meta nam='description' content='A jQuery plugin to build a sticky navigation of a article’s sections with highlighting while scrolling.'>
 <meta name='keywords' content='sticky nav, scrolling nav, navigation, james wilson, jimmynotjim, JS, javascript'>
 <meta name="viewport" content="initial-scale=1">
@@ -34,7 +34,7 @@
 				</li>
 				<li class="feature customize">
 					<h3>Fully Customizable</h3>
-					<p>All the styling is up to you and the few bits controled by the plugin editable</p>
+					<p>All the styling is up to you and the few bits controled by the plugin are editable</p>
 				</li>
 				<li class="feature size">
 					<h3>Tiny Size</h3>
@@ -52,7 +52,7 @@
 
 			<h3>Build your page</h3>
 
-			<p>Include a class or id hook on the element you want to apply the plugin to and include an <code>&lt;h3&gt;</code> for each section you want to inlcude in the navigation.</p>
+			<p>Include a class or id hook on the element you want to apply the plugin to and include an <code>&lt;h3&gt;</code> for section headings you want to inlcude in the navigation.</p>
 
 <p><pre>
 &lt;div class=&quot;main&quot;&gt;
@@ -78,7 +78,7 @@
 
 			<h3>Styling</h3>
 
-			<p>To keep the plugin simple there are no styles added to the navigation, that&#8217;s all up to you. The nav structure looks like this and includes class names in <a href="https://twitter.com/csswizardry">@csswizardry&#8217;s</a> <a href="http://inuitcss.com/">inuit.css</a> framework style:</p>
+			<p>To keep the plugin simple there are no styles added to the navigation, that&#8217;s all up to you. The nav structure looks like this and includes class names in <a href="https://twitter.com/csswizardry" rel="no-follow">@csswizardry&#8217;s</a> <a href="http://inuitcss.com/" rel="no-follow">inuit.css</a> framework style:</p>
 
 <p><pre>
 &lt;nav class=&quot;scroll-nav&quot;&gt;
@@ -131,11 +131,11 @@ $('.post-article').scrollNav({
 
 			<h2>Issues</h2>
 
-			<p>There are a few known issues, including poor location updating when scrolling on touch devices. If you find any others please submit them to the issue tracker.</p>
+			<p>There are a few known issues, including poor location updating when scrolling on touch devices. If you find any others please submit them to the <a href="https://github.com/jimmynotjim/scrollNav/issues" rel="no-follow">issue tracker</a>.</p>
 
 			<h2>License</h2>
 
-			<p>scrollNav is released under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC Attribution-ShareAlike license</a>. This means you can recreate, edit or share the plugin as long as you maintain the same open licensing.</p>
+			<p>scrollNav is released under the <a href="http://creativecommons.org/licenses/by-sa/3.0/" rel="no-follow">CC Attribution-ShareAlike license</a>. This means you can recreate, edit or share the plugin as long as you maintain the same open licensing.</p>
 
 			<h2>Authors</h2>
 
@@ -144,7 +144,7 @@ $('.post-article').scrollNav({
 			<p class="author-name">With a bit of guidance from Eric Clemmons (@ericclemmons) <a href="http://github.com/ericclemmons" class="author-link github"></a><a href="http://twitter.com/ericclemmons" class="author-link twitter"></a></p>
 
 			<h2>Colophon</h2>
-			<p>The scrollNav logo is set in Alfa Slab One by <a href="http://jmsole.cl/">JM Solé</a>. Body text and headlines are set in Open Slab by <a href="http://www.ascendercorp.com/about/steve-matteson/" rel="no-follow">Steve Matteson</a>. Both are delivered using <a href="http://www.google.com/webfonts" rel="no-follow">Google Web Fonts</a>. Icons are Entypo by <a href="http://www.danielbruce.se/" rel="no-follow">Daniel Buce</a> and were packaged using <a href="http://fontello.com" rel="no-follow">Fontello</a>.</p>
+			<p>The scrollNav logo is set in Alfa Slab One by <a href="http://jmsole.cl/">JM Sol&#233;</a>. Body text and headlines are set in Open Slab by <a href="http://www.ascendercorp.com/about/steve-matteson/" rel="no-follow">Steve Matteson</a>. Both are delivered using <a href="http://www.google.com/webfonts" rel="no-follow">Google Web Fonts</a>. Icons are Entypo by <a href="http://www.danielbruce.se/" rel="no-follow">Daniel Buce</a> and were packaged using <a href="http://fontello.com" rel="no-follow">Fontello</a>.</p>
 			<p>This demo is hosted and powered by <a href="http://github.com" rel="no-follow">GitHub</a> through <a href="http://pages.github.com" rel="no-follow">GitHub Pages</a>, built using <a href="http://www.sublimetext.com/2" rel="no-follow">Sublime Text 2</a>, <a href="http://incident57.com/codekit/ rel="no-follow"">Codekit</a>, and <a href="http://anvilformac.com/" rel="no-follow">Anvil</a> utilizing standard html5, jQuery and SCSS with the <a href="http://responsablecss.com/" rel="no-follow">ResponsableCSS</a> framework.</p>
 		</article>
 	</div>
