--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
 <meta name='keywords' content='sticky nav, scrolling nav, navigation, james wilson, jimmynotjim, JS, javascript'>
 <meta name="viewport" content="initial-scale=1">
 <link rel='stylesheet' href='assets/css/style.css'>
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,800|Vollkorn:400italic,700italic,400,700|Alfa+Slab+One' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,800|Alfa+Slab+One' rel='stylesheet' type='text/css'>
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-33078147-3']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
 </head>
 <body>
 	<header class="page-header" role="banner">
