Updated docs to reflect recent updates

--- a/index.html
+++ b/index.html
@@ -140,6 +140,22 @@ $('.post-article').scrollNav({
 
 			<p>The plugin animates the page scroll when clicking on a nav link by default. Set this to <code>false</code> if you do not wish to animate the scroll.</p>
 
+			<h3>Scrolling Speed<h3>
+
+			<p>Change this to either increase or decrease the animated page scroll speed.</p>
+
+			<h3>Show Headline</h3>
+
+			<p>Set this to <code>false</code> to remove the titleText entirely.</p>
+
+			<h3>Show Top Link</h3>
+
+			<p>Set this to <code>false</code> to remove the Top nav item entirely.</p>
+
+			<h3>Location</h3>
+
+			<p>You can pass any of the following jQuery insertion methods to change where scrollNav is inserted in relation to the targeted container. <code>insertBefore</code>, <code>prependTo</code>, <code>appendTo</code>, or <code>insertAfter</code></p>
+
 			<h2>Errors</h2>
 
 			<p>The plugin will refuse to build and log an error message if it doesn&#8217;t find your desired container or any sections within the container. If the nav doesn&#8217;t show up on load, check your browser&#8217;s console.</p>
