--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ $('.post-article').scrollNav({
 
 			<p>The plugin animates the page scroll when clicking on a nav link by default. Set this to <code>false</code> if you do not wish to animate the scroll.</p>
 
-			<h3>Scrolling Speed<h3>
+			<h3>Scrolling Speed</h3>
 
 			<p>Change this to either increase or decrease the animated page scroll speed.</p>
 
