--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ $('.post-article').scrollNav({
 
 			<h2>License</h2>
 
-			<p>scrollNav is released under the <a href="http://creativecommons.org/licenses/by-sa/3.0/" rel="no-follow">CC Attribution-ShareAlike license</a>. This means you can recreate, edit or share the plugin as long as you maintain the same open licensing.</p>
+			<p>scrollNav is Copyright &copy; 2012 James Wilson, released under the <a href="https://github.com/jimmynotjim/scrollNav/blob/master/LICENSE-MIT">MIT license</a>. This means you can recreate, edit or share the plugin as long as you maintain the same open licensing.</p>
 
 			<h2>Authors</h2>
 
