Updated landing page to use showHeadline option
rather than hide the headline w/ css

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ $('.post-article').scrollNav({
 	<script>
 		$('.post-article').scrollNav({
 			sections: 'h2',
-			titleText: 'Sections',
+			showHeadline: false,
 			fixedMargin: 60
 		});
 		var $item = $('.scroll-nav-item');
