Updated description to match README

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	<header class="page-header" role="banner">
 		<h1 class="page-title"><span>scrollNav.js</span></h1>
-		<h2 class="page-byline">A jQuery plugin for building a scrolling side nav</h2>
+		<h2 class="page-byline">A jQuery plugin for building a scrolling side navigation menu</h2>
 	</header>
 
 	<div class="main" role="main">
