Add assets for 2.0.0.

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ $('.post-article').scrollNav({
 
 			<p class="author__name">Written by James Wilson (@jimmynotjim) <a href="http://jimmynotjim.com" class="author__link home"></a><a href="http://github.com/jimmynotjim" class="author__link github"></a><a href="http://twitter.com/jimmynotjim" class="author__link twitter"></a><a href="http://dribbble.com/jimmynotjim" class="author__link dribbble"></a></p>
 
-			<h3>With a lots of help from:</h3>
+			<h3>With lots of help from:</h3>
 
 			<ul>
 				<li class="author__name">Eric Clemmons (@ericclemmons) <a href="http://github.com/ericclemmons" class="author__link github"></a><a href="http://twitter.com/ericclemmons" class="author__link twitter"></a></li>
