Typos and updated gitignore

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ $('.post-article').scrollNav({
 	<script src="assets/js/jquery.scrollNav.min.js"></script>
 	<script>
 		$('.post__article').scrollNav({
-			headlineText: 'srollNav',
+			headlineText: 'scrollNav',
 			fixedMargin: 60,
 			scrollOffset: 80,
 			arrowKeys: true
