Updated source url to point to latest

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<ul class="all-yours">
 			<li class="your-item">
-				<a href="https://github.com/jimmynotjim/scrollNav/archive/master.zip" class="grab-it">Grab the Source</a>
+				<a href="http://scrollnav.com/releases/latest/scrollNav.js.zip" class="grab-it">Grab the Source</a>
 			</li>
 			<li class="your-item">
 				<a href="https://github.com/jimmynotjim/scrollNav" class="fork-it">Fork the Repo</a>
