Updated Jeff's twitter url

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ $('.post__article').scrollNav({
 			<ul>
 				<li class="author__name">Eric Clemmons (@ericclemmons) <a href="http://github.com/ericclemmons" class="author__link github"></a><a href="http://twitter.com/ericclemmons" class="author__link twitter"></a></li>
 
-				<li class="author__name">Jeff Byrnes (@jeffbyrnes) <a href="http://github.com/jeffbyrnes" class="author__link github"></a><a href="http://twitter.com/berkleebassist" class="author__link twitter"></a></li>
+				<li class="author__name">Jeff Byrnes (@jeffbyrnes) <a href="http://github.com/jeffbyrnes" class="author__link github"></a><a href="http://twitter.com/thejeffbyrnes" class="author__link twitter"></a></li>
 
 				<li class="author__name">Jeff Coburn (@coburnicus) <a href="http://github.com/coburnicus" class="author__link github"></a><a href="http://twitter.com/coburnicus" class="author__link twitter"></a></li>
 
