--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 &lt;a class=&quot;scroll-nav__link&quot;&gt;
 </pre>
 
-			<p>An <code>active</code> class is attached to the nav item matching the section that is the highest within the view bounds. An <code>in-view</code> class is attached to all nav items whose section is within the view bounds. If you have short sections at the end of your page and dislike that the last nav itmes are never activated, you can use the <code>in-view</code> hook to style all sections with in the view.
+			<p>An <code>active</code> class is attached to the nav item matching the section and sub-section that is the highest within the view bounds. An <code>in-view</code> class is attached to all nav items whose section or sub-section is within the view bounds. If you have short sections at the end of your page and dislike that the last nav itmes are never activated, you can use the <code>in-view</code> hook to style all sections with in the view.
 
 			<p>There are loading hooks added to the body element (similar to how Typekit handles font loading) to allow for css transitions or any other changes in css you'd need. When the plug-in starts <code>sn-loading</code> is added to the body class and is replaced by <code>sn-active</code> when the plugin is successful or <code>sn-failed</code> if it fails.</p>
 
@@ -289,6 +289,8 @@ $('.post__article').scrollNav({
         <li class="author__name">Marc Amos (@marcams) <a href="http://github.com/marcamos" class="author__link github"></a></li>
 
         <li class="author__name">Felix Borzik (@Borzik) <a href="http://github.com/borzik" class="author__link github"></a></li>
+
+        <li class="author__name">Masud Rahman (@frutiger)<a href="http://github.com/frutiger" class="author__link github"></a></li>
 			</ul>
 
 			<h2>Colophon</h2>
